force-app/main/default/objects/ApexJobSummary__c/ApexJobSummary__c.object-meta.xml
<CustomObject>
    <label>Apex Job Summary</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Apex Job Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Job Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>