force-app/main/default/objects/ApexJobSummary__c/fields/JobDate__c.field-meta.xml
<CustomField>
    <fullName>JobDate__c</fullName>
    <label>Job Date</label>
    <type>Date</type>
</CustomField>