force-app/main/default/objects/ApexJobSummary__c/fields/SuccessRate__c.field-meta.xml
<CustomField>
    <fullName>SuccessRate__c</fullName>
    <formula>TotalSuccesses__c / (TotalSuccesses__c + TotalFailures__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>