force-app/main/default/objects/ApexJobSummary__c/fields/TotalBatches__c.field-meta.xml
<CustomField>
    <fullName>TotalBatches__c</fullName>
    <label>Total Batches</label>
    <summarizedField>ApexJobRun__c.TotalBatches__c</summarizedField>
    <summaryForeignKey>ApexJobRun__c.ApexJobSummary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>