force-app/main/default/objects/ApexJobSummary__c/fields/TotalFailures__c.field-meta.xml
<CustomField>
    <fullName>TotalFailures__c</fullName>
    <label>Total Failures</label>
    <summarizedField>ApexJobRun__c.TotalFailures__c</summarizedField>
    <summaryForeignKey>ApexJobRun__c.ApexJobSummary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>