force-app/main/default/objects/ApexJobSummary__c/fields/TotalJobs__c.field-meta.xml
<CustomField>
    <fullName>TotalJobs__c</fullName>
    <label>Total Jobs</label>
    <summaryForeignKey>ApexJob__c.ApexJobSummary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>