force-app/main/default/objects/ApexJobSummary__c/fields/TotalSuccesses__c.field-meta.xml
<CustomField>
    <fullName>TotalSuccesses__c</fullName>
    <label>Total Successes</label>
    <summarizedField>ApexJobRun__c.TotalSuccesses__c</summarizedField>
    <summaryForeignKey>ApexJobRun__c.ApexJobSummary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>